# consilience

./: .env.example  .gitignore  CHANGELOG.md  DATA_HANDLING.md  LAUNCH_READINESS.md  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
apps/web/: README.md  package-lock.json  package.json
apps/web/src/: proxy.ts
apps/web/src/app/: page.tsx  (+2 more)
docs/: demo-script.md  disaster-recovery.md
docs/adr/: 001-polyglot-architecture.md  002-rabbitmq-message-broker.md  003-neon-postgres.md  004-clerk-authentication.md
docs/architecture/: system-overview.md
docs/legal/: trademark-check.md
infra/: DEPLOYMENT.md  README.md  docker-compose.full.yml  docker-compose.yml
services/engine/: Dockerfile  README.md  build.gradle.kts  fly.toml  settings.gradle.kts
services/engine/migrations/: 0004_rate_limited_status.sql  0005_approval_gate.sql
services/gateway/: Consilience.Gateway.slnx  Dockerfile  README.md  fly.toml
services/mesh/: Dockerfile  README.md  fly.toml  pyproject.toml
services/mesh/migrations/: 0002_create_runs_claims_sources.sql  0003_multi_agent_and_credibility.sql  0004_contradictions_and_evaluations.sql
services/mesh/src/mesh/: config.py  credibility.py  evaluation.py  lenses.py  llm.py  orchestrator.py  repo.py  researcher.py  schemas.py  trace.py  worker.py
services/mesh/tests/: test_credibility.py  test_evaluation.py  test_orchestrator.py  test_researcher.py  test_schemas.py  test_trace.py  test_trace_contract.py  test_worker.py
tests/: README.md
tests/e2e/: pipeline_smoke.py
tests/load/: dispatch_load.py
(+57 files in other folders)
