[project]
name = "mesh"
version = "0.2.0"
description = "Consilience agent runtime: research agents, LLM routing, scoring"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=10.0.1",
    "asyncpg>=0.30",
    "google-genai>=1.16",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mesh"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
